Move more stuff from hidden backend